added faker fixture command

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
 		"yiisoft/yii2-bootstrap": "self.version",
 		"yiisoft/yii2-debug": "self.version",
 		"yiisoft/yii2-elasticsearch": "self.version",
+		"yiisoft/yii2-faker": "self.version",
 		"yiisoft/yii2-gii": "self.version",
 		"yiisoft/yii2-jui": "self.version",
 		"yiisoft/yii2-redis": "self.version",
@@ -81,6 +82,7 @@
 			"yii\\bootstrap\\": "extensions/bootstrap/",
 			"yii\\debug\\": "extensions/debug/",
 			"yii\\elasticsearch\\": "extensions/elasticsearch/",
+			"yii\\faker\\": "extensions/faker/",
 			"yii\\gii\\": "extensions/gii/",
 			"yii\\jui\\": "extensions/jui/",
 			"yii\\redis\\": "extensions/redis/",
