--- a/extensions/codeception/composer.json
+++ b/extensions/codeception/composer.json
@@ -18,8 +18,10 @@
 	],
 	"require": {
 		"yiisoft/yii2": "*",
-		"codeception/codeception": "*",
 		"codeception/specify": "*"
+	},
+	"require-dev": {
+		"codeception/codeception": "*"
 	},
 	"autoload": {
 		"psr-4": { "yii\\codeception\\": "" }
