--- a/composer.json
+++ b/composer.json
@@ -75,12 +75,10 @@
 		"yiisoft/yii2-composer": "*",
 		"yiisoft/jquery": "~2.0 | ~1.10",
 		"ezyang/htmlpurifier": "4.6.*",
-		"michelf/php-markdown": "1.3.*",
-		"phpspec/php-diff": ">=1.0.2"
+		"michelf/php-markdown": "1.3.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "3.7.*",
-		"twig/twig": "*"
+		"phpunit/phpunit": "3.7.*"
 	},
 	"suggest": {
 		"phpdocumentor/reflection": "required by yii2-apidoc extension",
@@ -93,7 +91,8 @@
 		"imagine/imagine": "required by yii2-imagine extension",
 		"smarty/smarty": "required by yii2-smarty extension",
 		"swiftmailer/swiftmailer": "required by yii2-swiftmailer extension",
-		"twig/twig": "required by yii2-twig extension"
+		"twig/twig": "required by yii2-twig extension",
+		"phpspec/php-diff": "required by yii2-gii extension"
 	},
 	"autoload": {
 		"psr-4": {
