--- a/composer.json
+++ b/composer.json
@@ -75,10 +75,12 @@
 		"yiisoft/yii2-composer": "*",
 		"yiisoft/jquery": "~2.0 | ~1.10",
 		"ezyang/htmlpurifier": "4.6.*",
-		"michelf/php-markdown": "1.3.*"
+		"michelf/php-markdown": "1.3.*",
+		"phpspec/php-diff": ">=1.0.2"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "3.7.*"
+		"phpunit/phpunit": "3.7.*",
+		"twig/twig": "*"
 	},
 	"suggest": {
 		"phpdocumentor/reflection": "required by yii2-apidoc extension",
@@ -90,9 +92,7 @@
 		"fzaninotto/faker": "required by yii2-faker extension",
 		"imagine/imagine": "required by yii2-imagine extension",
 		"smarty/smarty": "required by yii2-smarty extension",
-		"swiftmailer/swiftmailer": "required by yii2-swiftmailer extension",
-		"twig/twig": "required by yii2-twig extension",
-		"phpspec/php-diff": "required by yii2-gii extension"
+		"swiftmailer/swiftmailer": "required by yii2-swiftmailer extension"
 	},
 	"autoload": {
 		"psr-4": {
